Closed Bug 307363 Opened 20 years ago Closed 20 years ago

Don't add '---^' to XML errors in the JS console

Categories

(Core :: XML, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: peterv, Assigned: peterv)

Details

Attachments

(1 file)

Currently the code to add XML errors to the JS console piggybacks on the existing code that displays the error in the browser window. Because of that, when we display the source line that contains the error in the JS console, it contains the pointer ('---^') that we use to point to the error in the browser window. We shouldn't do that.
Attached patch v1Splinter Review
Assignee: xml → peterv
Status: NEW → ASSIGNED
Attachment #195151 - Flags: superreview?(jst)
Attachment #195151 - Flags: review?(benjamin)
Attachment #195151 - Flags: review?(benjamin) → review+
Attachment #195151 - Flags: superreview?(jst) → superreview+
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Priority: -- → P5
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: