Fix for bug 307363 (Don't add '---^' to XML errors in the JS console). r=bsmedberg, sr=jst.